--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,4 @@
+/*Updated 2.0*/
 .quote
 {
     display: flex;  
@@ -6,7 +7,7 @@
     align-items: center;
     margin-top: 2%;
     font-family: 'IBM Plex Serif', serif;
-    font-size: 70px;
+    font-size: 7vw;
     font-weight:bolder;
 }
 .animate
@@ -73,15 +74,17 @@
 }
 .welcome
 {
-    font-size:30px;
+    font-size:3.5vw;
     font-family: 'Roboto Condensed', sans-serif;
 }
 .card {
     flex-direction: row;
     border: 0px;
+    width: 90%;
+    height: 30%;
     gap:10px;
-    padding: 50px;
-    margin: 50px;
+    padding: 0%;
+    margin: 5%;
     border-radius: 8%;
     transition: transform 500ms;
 }
@@ -90,10 +93,9 @@
 }
 .projimg
 {
-    height:343px;
-    width: 704px;
-    margin: 0;
-    padding: 0 ;
+    height:50%;
+    width: 90%;;
+    margin : 5%;
 }
 .btn {
     transition: background-color 300ms ease-out 100ms;
@@ -106,12 +108,13 @@
   }
   .carouselimg
   {
-    height: 648px;
-    width: 1000px;
-    padding: 50px;
-    padding-top: 0;
-    margin-top: 3%;
-    margin-left: 17%;
+    height: 53.25%;
+    width: 80%;
+    padding-top: 1%;
+    padding-right: 9%;
+    padding-left: 9%;
+    margin-left: 9%;
+    margin-right: 9%;
   }
   .carousel-control-prev-icon, .carousel-control-next-icon {
     height: 25px;
@@ -131,12 +134,12 @@
     display: flex;
     border: 0px;
     gap:10px;
-    padding: 50px;
-    margin: 50px;
+    padding: 5%;
+    margin: 5%;
     border-radius: 8%;
     transition: transform 500ms;
-    width: 1000px;
-    height: 300px;
+    width: 90%;
+    font-size: 30px;
 }
 .homecard:hover{
     transform: scale(0.95);
@@ -149,11 +152,13 @@
 }
 .aboutcontent
 {
-    font-size:20px;
+    font-size:2vw;
     font-family: 'Roboto Condensed', sans-serif;
     margin-top: 5px;
-    margin-right: 200px;
-    margin-left: 200px;
+    margin-left:9%;
+    padding-left: 9%;
+    padding-right: 9%;
+    margin-right: 9%;
 }
 .underline
 {
@@ -166,17 +171,20 @@
 {
     margin-top: 2%;
     font-family: 'IBM Plex Serif', serif;
-    font-size: 50px;
+    font-size: 5vw;
     font-weight:bolder;
-    margin-left: 200px;
+    margin-left:9%;
+    padding-left: 9%;
 }
 .clubcard
 {
-   padding: 50px;
-   margin-top: 20px;
-   margin-bottom: 20px;
-   margin-left: 200px;
-   margin-right: 200px;
+   margin-top: 2%;
+   width:64%;
+   padding-top: 1%;
+   padding-right: 1%;
+   padding-left: 2%;
+   margin-left: 18%;
+   margin-right: 1%;
    border-radius: 5%;
    display: flex;
    transition: transform 500ms;
@@ -185,10 +193,28 @@
 {
     transform: scale(0.95);
 }
+.card-title
+{
+    margin-top: 5%;
+    margin-left: 1%;
+}
 .clubimg
 {
-    height: 200px;
-    width: 200px;
+    height: 30%;
+    width: 30%;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    justify-content: center;
+}
+.card-text
+{
+    font-size: 1.4vw;
+    margin-left: 1%;
+    margin-right: 1%;
+    padding-left: 0%;
+    padding-right: 0%;
+    margin-top: 1%;
+    margin-bottom: 5%;
 }
 footer
 {
@@ -201,7 +227,7 @@ footer
 }
 .educard
 {
-    width: 1000px;
+    width: 95%;
     border-radius: 8%;
     transition: transform 500ms;
 }
@@ -222,140 +248,149 @@ footer
     z-index: 1;
     background-color: #eaeaea ;
 }
-@media (max-width: 1100px) 
-{
-.quote
-{
-    display: flex;  
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 2%;
-    font-family: 'IBM Plex Serif', serif;
-    font-size: 40px;
-    font-weight:bolder;
+.navbar > .container {
+    font-size: 25px;
+    font-weight: 800;
 }
-.welcome
+.navbar-brand
 {
-    font-size:8px;
-    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 30px;
 }
-.contactcard
+@media(max-width:1100px)
 {
-    background-color:#eaeaea;
-    height: 320px;
-    width: 410px;
-    align-content: center;
-    border-radius: 5%;
-    position: absolute;
-    top: 63%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    display: flex inline-block;
-    gap: 300px;
-}
-.image
-{
-    height: 264px;
-    width: 400px;
-    border-radius: 5%;
-}
-.welcome
-{
-    font-size:20px;
-    font-family: 'Roboto Condensed', sans-serif;
-}
-.card {
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin: 50px;
-    padding: 0px;
-    border-radius: 5%;
-}
-.projimg
-{
-    padding :75px;
-    padding-bottom: 0px;
-    margin: 0px;
-    height:243px;
-    width: 504px;
-}
-.carouselimg
-{
-    height: 400px;
-    width: 80%;
-    padding:0;
-    margin-top: 10%;
-    margin-left:10%
-  }
-  .homecard
-{
-    display: flex;
-    flex-direction: column;
-    border: 0px;
-    gap:10px;
+    .homecard
+    {
+        height:50%;
+        width: 90%;
+        display: flex;
+        flex-direction: column;
+        font-size: 30px;
+        justify-content: center;
+        align-items: center;
+    }
+    .educard
+    {
+    width: 95%;
     border-radius: 8%;
     transition: transform 500ms;
-    width: 95%;
-    height: 450px;
-    padding: 0;
-    margin: 0px;
-}
-.card-img-top
-{
-    height:300px;
-    width:466px;
+    }
+    .eduincard
+    {
+    background-color: #F7B787;
+    margin: 5%;
+    padding: 5%;
+    height: 30%;
+    width: 90%;
     border-radius: 5%;
-}
-.aboutmetitle
-{
+    }
+    .projimg
+    {
+        height:50%;
+        width: 90%;
+        margin: 0;
+        padding: 0 ;
+    }
+    .navbar > .container {
+        font-size: 30px;
+        font-weight: 800;
+    }
+    .navbar-brand
+    {
+    font-size: 40px;
+    }
+    .carouselimg
+    {
+      height: 63.9%;
+      width: 96%;
+      padding: 3%;
+      padding-right: 1%;
+      padding-left: 2%;
+      margin-left: 1%;
+      margin-right: 1%;
+      padding-bottom: 0;
+      margin-bottom: 0;
+    }
+    .aboutmetitle
+    {
     margin-top: 2%;
     font-family: 'IBM Plex Serif', serif;
-    font-size: 35px;
+    font-size: 5vw;
     font-weight:bolder;
-    margin-left: 10px;
-}
-.aboutcontent
-{
-    font-size:20px;
+    margin-left:1%;
+    padding-left: 2%;
+    }
+    .aboutcontent
+    {
+    font-size : 3vw;
     font-family: 'Roboto Condensed', sans-serif;
     margin-top: 5px;
-    margin-right: 10px;
-    margin-left: 10px;
-}
-.clubcard
-{
-    flex-direction: column;
-    align-items: center;
+    margin-left:1%;
+    padding-left: 2%;
+    padding-right: 1%;
+    margin-right: 1%;
+    }
+    .clubcard
+    {
+   margin-top: 2%;
+   width:90%;
+   padding-top: 1%;
+   padding-right: 1%;
+   padding-left: 2%;
+   margin-left: 5%;
+   margin-right: 1%;
+   border-radius: 5%;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   transition: transform 500ms;
+   }
+   .card-title
+   {
+    margin-top: 1%;
+    margin-left: 5%;
+    font-size: 4vw;
+   }
+   .clubimg
+   {
+    height: 90%;
+    width: 90%;
+    margin-top: 5%;
+    margin-bottom: 5%;
     justify-content: center;
-    margin: 25px;
-    margin-bottom: 23px;
-    padding: 0px;
-    border-radius: 5%;
-}
-.clubimg
-{
-    padding:20px;
-    height: 350px;
-    width: 350px;
-    border-radius: 5%;
-}
-.educard
-{
-    width: 95%;
-    border-radius: 5%;
+   }
+   .card-text
+   {
+    font-size: 3vw;
+    margin-left: 5%;    
+    margin-right: 1%;
+    padding-left: 0%;
+    padding-right: 0%;
+    margin-top: 1%;
+    margin-bottom: 5%;
+   }
+   .card 
+   {
+    flex-direction: column;
+    border: 0px;
+    width: 90%;
+    height: 30%;
+    gap:10px;
+    padding: 0%;
+    margin: 5%;
+    border-radius: 8%;
     transition: transform 500ms;
-    margin-top: 10px;
+    }
+    .projimg
+    {
+    height:50%;
+    width: 90%;;
+    margin : 5%;
+    }  
+    .btn 
+    {
+     margin-left: 42.5%;
+     margin-bottom: 5%;
+    }
 }
-.educard:hover{
-    transform: scale(0.95);
-}
-.eduincard
-{
-    background-color: #F7B787;
-    margin: 50px;
-    padding: 50px;
-    border-radius: 5%;
-}
-}
+
