--- a/public/styles.css
+++ b/public/styles.css
@@ -175,6 +175,7 @@
     font-weight:bolder;
     margin-left:9%;
     padding-left: 9%;
+    padding-bottom: 1.5%;
 }
 .clubcard
 {
@@ -256,6 +257,16 @@ footer
 {
     font-size: 30px;
 }
+.homecardtext
+{
+    font-size: 2vw;
+    margin-left: 1%;
+    margin-right: 1%;
+    padding-left: 0%;
+    padding-right: 0%;
+    margin-top: 7%;
+    margin-bottom: 5%;
+}
 @media(max-width:1100px)
 {
     .quote
@@ -334,6 +345,7 @@ footer
     font-weight:bolder;
     margin-left:1%;
     padding-left: 2%;
+    padding-bottom: 1.5%;
     }
     .aboutcontent
     {
@@ -418,6 +430,14 @@ footer
     gap: 300px;
     transform: translate(-50%,-200%);
     }
+    .homecardtext
+    {
+    font-size: 2.5vw;
+    margin-left: 1%;
+    margin-right: 1%;
+    padding-left: 0%;
+    padding-right: 0%;
+    margin-top: 2%;
+    margin-bottom: 5%;
+   }
 }
-
-
